<resources>
    <string name="app_name">IEEE</string>
    <string name="forgotPassword"><u>Forgate Password?</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="password_roles">  \u25CFUpper and Lowercase letters\n
\u25CFMore than 8 characters\n
\u25CFContains a number and symbol </string>


    <string name="event_name">Event Name</string>
    <string name="date_time">Mon, 23 Nov 1:30 - 5:00pm</string>
    <string name="location">Cairo Uni., Cairo</string>
    <string name="android">Android</string>
    <string name="search_for_event">Search for event...</string>

    <string name="about_event">About Event</string>
    <string name="about_event_text">Hello will take about and  Lorem ipsum dolor sit amet consectetur. Gravida nulla laoreet ipsum ultrices id id pulvinar egestas ante. Adipiscing lobortis vel justo viverra egestas sit adipiscing viverra saldnsalnd asldnlnaslas alsnlasnlasn alsndlasndwnas nfslaflnansfin asndlasnlfn.</string>
    <string name="speakers">Speakers</string>
    <string name="speakrs">Speakers</string>
    <string name="branch">Branch</string>
    <string name="follow">Follow</string>
    <string name="more_events_from_this_branch">More Events from this branch</string>
    <string name="book_event">Book Event</string>

    <string name="book_eventt">Book Event</string>
    <string name="event">Event : </string>
    <string name="date_amp_time"><![CDATA[Date & time :]]></string>
    <string name="monday_26_19_2022_15_pm">Monday 26 - 19 -2022 / 15 pm</string>
    <string name="event_location">Event Location : </string>
    <string name="event_organizer">Event Organizer : </string>
    <string name="e_mail">E-mail :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="add_participant">Add participant</string>
    <string name="confirm">Confirm</string>
    <string name="enter_name">enter name</string>
    <string name="enter_email_address">enter email address</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="your_have_succefully_booked_for_help_desk">your have succefully booked for Help Desk</string>
    <string name="view_ticket">View Ticket</string>
    <string name="go_to_home">Go to Home</string>
    <string name="congratulations">Congratulations</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="ticket">Ticket</string>
    <string name="add_to_my_calender">Add to my calender</string>
    <string name="show_location">location</string>
    <string name="download_ticket">Download Ticket</string>

    <string name="explore">Explore</string>
    <string name="filter">Filter</string>
    <string name="event_category">Event Category</string>
    <string name="msb">MSB - Menofiua Student Branch</string>
    <string name="branches">Branches</string>
    <string name="location_list">Location</string>
    <string name="cairo_university">Cairo - Cairo University</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="tickets">Tickets</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="view_ticket">View Ticket</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="how_was_the_speakers">How was the speakers</string>
    <string name="write_in_detail_about_your_experience">write in detail about your experience</string>



</resources>