<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="3dp"
    android:padding="14dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="Name : "
        android:textColor="@color/black"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:hint="@string/enter_name"
        android:fontFamily="@font/roboto"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:text="@string/e_mail"
        android:textSize="14sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/add_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="90dp"
        android:hint="@string/enter_email_address"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginStart="16dp"
        android:text="@string/phone_number"
        android:textSize="14sp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/add_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="phone"
        android:hint="@string/enter_phone_number"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="160dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/add_btn"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="210dp"
        android:layout_marginStart="16dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_btn"
        />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_hue_btn"
            android:text="@string/cancel"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>