<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="36dp"

        android:orientation="vertical">
  <ImageView
      android:layout_width="160dp"
      android:layout_height="160dp"
      android:src="@drawable/done"
      android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:layout_gravity="center"
            android:textColor="#006491"
            android:textStyle="bold"
            android:textSize="22sp" />
        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/your_have_succefully_booked_for_help_desk"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp" />
        
        <Button
            android:id="@+id/view_ticket_btn"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/view_ticket"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_home_btn"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:background="@drawable/rounded_hue_btn"
            android:text="@string/go_to_home"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>


    </LinearLayout>
    
    
   
</androidx.cardview.widget.CardView>

