<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:text="@string/event"
        />
    <TextView
        android:id="@+id/event_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:text="@string/date_amp_time"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/event_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday_26_19_2022_15_pm"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="16dp"
        android:text="@string/event_location"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/event_location_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cairo university"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="140dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginStart="16dp"
        android:text="@string/event_organizer"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/event_organizer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MSB"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="200dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        />

</androidx.cardview.widget.CardView>