<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:paddingBottom="32dp"
    android:id="@+id/filter_bottomSheet"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/filter"
        android:textAppearance="@style/Headline.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        app:dividerColor="@color/black"
        app:dividerThickness="1dp"
        app:layout_constraintTop_toBottomOf="@id/filter_title"/>

    <RelativeLayout
        android:id="@+id/event_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/materialDivider">
        <TextView
            android:id="@+id/event_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_category"
            android:textAppearance="@style/Title.Large" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_category_title"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/event_category_list"
            app:spanCount="3"
            tools:listitem="@layout/tag_button" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/branches_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/event_category">

        <TextView
            android:id="@+id/branches_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branches"
            android:textAppearance="@style/Title.Large"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/branches_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/branches_title"
            android:layout_marginTop="10dp"
            android:hint="@string/msb">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/location_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/branches_list">

        <TextView
            android:id="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_list"
            android:textAppearance="@style/Title.Large"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_title"
            android:layout_marginTop="10dp"
            android:hint="@string/cairo_university">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/filter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/location_list">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:paddingStart="66dp"
            android:paddingTop="12dp"
            android:paddingEnd="66dp"
            android:paddingBottom="12dp"
            android:text="@string/reset"
            android:textColor="@color/primary_40"
            android:textAppearance="@style/Title.Small"
            android:backgroundTint="#D3E5F5"/>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/reset_button"
            android:paddingStart="66dp"
            android:paddingTop="12dp"
            android:paddingEnd="66dp"
            android:paddingBottom="12dp"
            android:text="@string/apply"
            android:textAppearance="@style/Title.Small" />
    </RelativeLayout>







</androidx.constraintlayout.widget.ConstraintLayout>