<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/upcoming_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">

            <View
                android:id="@+id/upcoming_event_image"
                android:layout_width="129dp"
                android:layout_height="95dp"
                android:background="@drawable/event_thumbnail"
                app:circularflow_defaultRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="22dp">

            <TextView
                android:id="@+id/upcoming_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textAppearance="@style/Label.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/date_time_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_event_title">

                <ImageView
                    android:id="@+id/ic_clock"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginBottom="1dp"
                    android:src="@drawable/clock_circle" />

                <TextView
                    android:id="@+id/upcoming_event_dateAndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/ic_clock"
                    android:text="@string/date_time"
                    android:textAppearance="@style/Label.Small"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/location_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_time_group">

                <ImageView
                    android:id="@+id/ic_mpa_pin"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/map_point" />

                <TextView
                    android:id="@+id/upcoming_event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/ic_mpa_pin"
                    android:text="@string/location"
                    android:textAppearance="@style/Label.Small"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/cancel_booking_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_booking"
                android:textAppearance="@style/Body.Medium" />

            <Button
                android:id="@+id/view_ticket"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/cancel_booking_button"
                android:text="@string/view_ticket"
                android:textAppearance="@style/Body.Medium" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>