<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:paddingBottom="32dp"
    android:id="@+id/review_bottomSheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/leave_a_review"
        android:textAppearance="@style/Headline.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        app:dividerColor="@color/black"
        app:dividerThickness="1dp"
        app:layout_constraintTop_toBottomOf="@id/review_title"/>

    <RelativeLayout
        android:id="@+id/event_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/materialDivider">

        <TextView
            android:id="@+id/event_rating_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How was “Help Desk” event"
            android:textAppearance="@style/Title.Medium"/>

        <RatingBar
            android:id="@+id/event_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_rating_title"
            android:layout_marginTop="20dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/speaker_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/event_rate">

        <TextView
            android:id="@+id/speaker_rating_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_speakers"
            android:textAppearance="@style/Title.Medium"/>

        <RatingBar
            android:id="@+id/speaker_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speaker_rating_title"
            android:layout_marginTop="20dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/review_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/speaker_rate">

        <TextView
            android:id="@+id/review_block_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_speakers"
            android:textAppearance="@style/Title.Medium"/>

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:hint="@string/write_in_detail_about_your_experience"
            android:layout_below="@+id/review_block_title"/>

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/filter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/review_block">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:paddingStart="66dp"
            android:paddingTop="12dp"
            android:paddingEnd="50dp"
            android:paddingBottom="12dp"
            android:text="@string/cancel"
            android:textColor="@color/primary_40"
            android:textAppearance="@style/Title.Small"
            android:backgroundTint="#D3E5F5"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/cancel_button"
            android:paddingStart="66dp"
            android:paddingTop="12dp"
            android:paddingEnd="50dp"
            android:paddingBottom="12dp"
            android:text="@string/submit"
            android:textAppearance="@style/Title.Small" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>